--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
