--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    implementation 'com.google.android.material:material:1.7.0'
+
+
 }
